--- a/nothing.html
+++ b/nothing.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-    <style type="text/css">
-        h1{
-            text-align: center;
-            font-size: 50px;
-        }
-    </style>
-</head>
-<body>
-    <h1>Hello Github</h1>   
-</body>
-</html>
+<script>
+//var the_class = "r-community-r-detail-c-comment_item--work_link r-community-r-detail-c-comment_item--work_link_4";
+//window.parent.document.getElement喵yClassName(the_class).getElement喵yTagName("p").innerH喵L = "编程猫官方";
+window.alert("我已经黑进去了编程猫的服务器！[doge]");
+</script>
