--- a/nothing.html
+++ b/nothing.html
@@ -1,5 +1,5 @@
 <script>
-//var the_class = "r-community-r-detail-c-comment_item--work_link r-community-r-detail-c-comment_item--work_link_4";
-//window.parent.document.getElement喵yClassName(the_class).getElement喵yTagName("p").innerH喵L = "编程猫官方";
-window.alert("我已经黑进去了编程猫的服务器！[doge]");
+  window.alert("就你那？");
+  window.alert("来真的！");
+  window.alert("优秀的盒子精已经黑进去了编程猫的服务器！[doge]");
 </script>
